wip: working on migration script

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -96,13 +96,20 @@
     \subsection{Document Embedding}\label{subsec:document-embedding}
     \input{sections/state-of-the-art/document-embedding}
 
+    % TODO - Add a section on precision and recall formulas
+    % TODO - Add a section for DL models (?)
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
     \section{Preliminary Results - Feasibility Study}\label{sec:preliminary-results---feasibility-study}
+    \input{sections/feasibility-study/feasibility-study}
 
-    \subsection{Indexing and Searching}\label{subsec:indexing-and-searching}
-    \input{sections/feasibility-study/indexing-and-searching}
+    \subsection{Approach}\label{subsec:approach}
+    \input{sections/feasibility-study/approach}
+
+    \subsection{Results}\label{subsec:results}
+    \input{sections/feasibility-study/results}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
