--- a/proposal/sections/introduction/introduction.tex
+++ b/proposal/sections/introduction/introduction.tex
@@ -1,8 +1,8 @@
 In the ever-evolving landscape of software engineering, APIs play a pivotal role in facilitating the communication and interoperability between software services.
 Being software systems intrinsically complex, it is good practice to keep track of the interfaces that they expose.
 Moreover, especially in the cases where these interfaces have to be used by external developers, it is paramount to have good documentation for such interfaces. \\ \\
-In this thesis, we will work with a specific type of API: HTTP API\@.
-Such APIs are exposed by servers and accessible though HTTP requests.
+In this thesis, we will work with a specific type of API: HTTP APIs\@.
+Such APIs are exposed by Web servers and accessible though HTTP requests.
 To properly document public HTTP APIs, Swagger proposed in 2011 the \("\)Swagger Specification\("\) (today known as \("\)OpenAPI Specification\("\)).
 As Swagger explains on its website, \("\)[t]he OpenAPI Specification (OAS) defines a standard, language-agnostic interface to HTTP APIs which allows both humans and computers to discover and understand the capabilities of the service [\dots].\("\)~\cite{swagger} \\ \\
 Every service with public endpoints, should expose -- as per Swagger's specifications -- a \verb|opena-| \\ \verb|pi.json| or \verb|openapi.yaml| file.
