--- a/proposal/sections/introduction/motivation.tex
+++ b/proposal/sections/introduction/motivation.tex
@@ -5,4 +5,4 @@ In the previously mentioned platforms, indexing of specifications is superficial
 With API Scout, we want to index API specifications based not only on their title, but based on all the tags containing natural language. \\ \\
 Another feature missing in the aforementioned platforms is a proper visualization system.
 By using tools to convert specifications into interactive trees, users can better understand the structure of the service's endpoints.
-Moreover, we can also plot some statistics about the selected API and how it compares to all the specifications present on our platform.
+Moreover, we can also plot some statistics about the selected API metrics to visually compare it to all the specifications present on our platform.
