--- a/proposal/sections/state-of-the-art/open-api.tex
+++ b/proposal/sections/state-of-the-art/open-api.tex
@@ -1,4 +1,5 @@
 An API is a set of interfaces that can be accessed by other users or developers.
 To document such APIs, API specifications are used.
 These specifications document the functioning and expected output of such interfaces.
-The OpenAPI Specification is a specification language that offers a standardized way of writing API specifications.
+% TODO - Add citation
+The OpenAPI Standard~\cite{} is a specification language that offers a standardized way of writing API specifications for HTTP-based APIs.
