added evaluation formulas in the state of the art

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -96,7 +96,10 @@
     \subsection{Document Embedding}\label{subsec:document-embedding}
     \input{sections/state-of-the-art/document-embedding}
 
-    % TODO - Add a section on precision and recall formulas
+    \subsection{Evaluation}\label{subsec:evaluation}
+    \input{sections/state-of-the-art/evaluation}
+
+    % TODO - Add a section on t-SNE plots
     % TODO - Add a section for DL models (?)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -108,8 +111,12 @@
     \subsection{Approach}\label{subsec:approach}
     \input{sections/feasibility-study/approach}
 
+    \subsection{Ground Truth}\label{subsec:ground-truth}
+
     \subsection{Results}\label{subsec:results}
     \input{sections/feasibility-study/results}
+
+    \subsection{Comparison with APIs.guru}\label{subsec:comparison-with-apis.guru}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
