--- a/proposal/sections/state-of-the-art/open-api.tex
+++ b/proposal/sections/state-of-the-art/open-api.tex
@@ -1,5 +1,5 @@
 An API is a set of interfaces that can be accessed by other users or developers.
-To document such APIs, API specifications are used.
+To document such APIs, API specifications are used~\cite{de_api_2017}.
 These specifications document the functioning and expected output of such interfaces.
-% TODO - Add citation
-The OpenAPI Standard~\cite{} is a specification language that offers a standardized way of writing API specifications for HTTP-based APIs.
+The OpenAPI Standard~\cite{swagger_openapi_2021} is a specification language
+that offers a standardized way of writing API specifications for HTTP-based APIs.
